# twitchchatbot

./: Cargo.toml  README.md
documentation/: api.yaml
migrations/2020-03-15-211437_create_chatters/: down.sql  up.sql
migrations/2020-03-15-230753_create_commands/: up.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/chatbot/: mod.rs
src/database/: chatter.rs  chatter_schema.json  command.rs  mod.rs  schema.rs
