[package]
name = "twitchchatbot"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full", "macros"] }
twitchchat = { version = "0.8.4", features = ["async"] }
dotenv = "0.15.0"