[package]
name = "twitchchatbot"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = "0.8.4"
tokio = { version = "0.2.13", features = ["full", "macros"] }
dotenv = "0.15.0"
diesel = { version = "1.4.3", features = ["postgres"] }
warp = "0.3.3"
serde_derive = "1.0.105"
serde = "1.0.105"
serde_json = "1.0.48"